# Fathuss

./: .env.example  .gitignore  Dockerfile.service  README.md  deploy-k8s.sh  docker-compose.yml  init-databases.sh  jest.config.js  package-lock.json  package.json  seed-badges.js  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  release.yml
api-gateway/: .env  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
api-gateway/src/: index.test.ts  index.ts
audit-service/: Dockerfile  README.md  package.json
audit-service/src/: index.js  index.test.js
clickhouse-init/: init.sql
database/: README.md  schema.sql  seed.sql
docs/: CICD_STRATEGY.md  DATA_RETENTION_POLICY.md  DMCA_TAKEDOWN.md  GDPR_COMPLIANCE.md  TERMS_OF_SERVICE.md
grader-orchestration/src/: cache.js
infrastructure/terraform/: argocd.tf  cache.tf  cost-optimization.tf  databases.tf  eks.tf  main.tf  monitoring.tf  outputs.tf  variables.tf  vpc.tf
k8s/: README.md  SECRETS_README.md  fathuss-worker-policy.hcl  vault-agent-config.hcl  vault-policy.hcl  vault-secret-template.ctmpl
mobile/: App.tsx  README.md  package-lock.json  package.json
services/: README.md
services/grader-orchestration/: Cargo.toml  Dockerfile  README.md  WORKER_README.md  package-lock.json  package.json  tsconfig.json  worker.Dockerfile
services/grader-orchestration/prisma/: schema.prisma
services/grader-orchestration/src/: anti_cheat.rs  cache.ts  compiler.rs  fixtures.rs  fuzzer.rs  grader.rs  grader.test.ts  index.ts  lib.rs  sandbox.rs  types.ts  worker-pool.ts  worker.rs
(+111 files in other folders)
